--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ body {
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)) ;
 }
 .hero-title {
   color: var(--white-color);
@@ -216,7 +217,6 @@ body {
 .command {
     padding-top: 30px;
     padding-bottom: 30px;
-    background-color: var(--white-color);
 }
 .command-image {
     display: block;
@@ -233,6 +233,12 @@ body {
 }
 .command-people {
   margin-right: 30px;
+  background-color: var(--white-color);
+  box-shadow:0px 1px 3px rgba(0, 0, 0, 0.12), 
+  0px 1px 1px 
+  rgba(0, 0, 0, 0.14), 0px 2px 1px 
+  rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .command-people:nth-child(4n) {
   margin-right: 0px;
@@ -250,15 +256,59 @@ body {
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
+  margin-bottom: 16px;
 }
+.command-icoons-list {
+  display: flex;
+  justify-content: center;
+}
+.command-icoons-item {
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+}
+.command-icoons-item:not(:last-child) {
+  margin-right: 0;
+}
+.command-icoons-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: var(--white-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.command-icoons-link:hover,
+.command-icoons-link:focus {
+  background-color: var(--accent-color);
+}
+.command-icoons-link:hover .command-icoons-svg,
+.command-icoons-link:focus .command-icoons-svg {
+  fill: var(--white-color);
+}
+.command-icoons-svg {
+  width: 20px;
+  height: 20px;
+  fill: #AFB1B8;
+
+}
+/* -------------------client-------------------- */
+.client {
+  padding-top:94px;
+  padding-bottom: 94px;
+}
+.client-title {
+  margin-bottom: 50px;
+}
+
+
+
 /*-----------footer------------*/
 .footer-bgr {
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
-}
-.footer-link {
-  flex-direction: column;
 }
 .location-nave {
   margin-top: 20px;
@@ -284,6 +334,37 @@ body {
   letter-spacing: 0.03em;
   text-decoration: none;
 }
+
+.footer-right {
+  display: flex;
+}
+.footer-right-list {
+  display: flex;
+  justify-content: center;
+}
+.footer-right-item {  
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+}
+.footer-right-item:not(:last-child) {
+  margin-right: 0;
+}
+.footer-right-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.footer-right-icoons {
+  width: 20px;
+  height: 20px;
+  fill: var(--white-color);
+}
+
 /* --------------------СТРАНИЦА PORTFOLIO------------------*/
 /*-------Фильтр----------*/
 .shade-button {
