--- a/css/styles.css
+++ b/css/styles.css
@@ -53,12 +53,6 @@ body {
 .header .item:not(:last-child) {
   margin-right: 50px;
 }
-.contact-header {
-  display: flex;
-}
-.item-contact:not(:last-child) {
-  margin-right: 50px;
-}
 .logo {
   color: #000000;
   font-family: Raleway, sans-serif;
@@ -102,6 +96,12 @@ body {
   color: var(--accent-color);
 }
 /*-----------------contact-header--------*/
+.contact-header {
+  display: flex;
+}
+.item-contact:not(:last-child) {
+  margin-right: 50px;
+}
 .contact-header .contact {
   color: var(--primary-text-color);
   font-weight: 500;
@@ -113,10 +113,18 @@ body {
 .contact-header .contact:focus {
   color: var(--accent-color);
 }
+.header-contact-svg {
+  width: 10px;
+  height: 16px;
+}
+.header-email-svg {
+  width: 16px;
+  height: 12px;
+}
+
 /*------------hero--------------*/
 
 .hero {
-  background-color: #2f303a;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -124,8 +132,11 @@ body {
   padding-bottom: 200px;
   background-image: linear-gradient(
     rgba(47, 48, 58, 0.4),
-    rgba(47, 48, 58, 0.4)
-  );
+    rgba(47, 48, 58, 0.4)), url(../images/hero-image.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 1600px;
 }
 .hero-title {
   color: var(--white-color);
@@ -146,21 +157,44 @@ body {
   letter-spacing: 0.06em;
   cursor: pointer;
   border-radius: 4px;
-  border-color: var(--accent-color);
   border: 0px;
   margin: 0 auto;
   display: block;
   width: 200px;
   height: 50px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
-
+.button-primary:focus,
+.button-primary:hover {
+  background-color: #188CE8; 
+}
 /*------ДЛЯ ВСЕХ СЕКЦИЙ--------*/
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
-
 /*--------------section company-----------*/
+.company-image-list{
+  display: flex;
+  justify-content: center;
+}
+.company-image-item {
+  width: 270px;
+  height: 120px;
+  background-color: var(--light-color);
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+.company-image-item:not(:last-child) {
+  margin-right: 30px;
+}
+.company-image-svg {
+  width: 70px;
+  height: 70px;
+}
 .company {
   display: flex;
   flex-wrap: wrap;
@@ -298,6 +332,13 @@ body {
   padding-bottom: 94px;
 }
 .client-title {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
   margin-bottom: 50px;
 }
 
@@ -305,20 +346,30 @@ body {
   display: flex;
   justify-content: center;
 }
-
-.client-item{
-  width: 106px;
-  height: 92px;
-  
+.client-item:not(:last-child) {
+  margin-right: 30px;
 }
-.client-link {
-  width: 100%;
-  height: 100%;
+.client-link{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  width: 170px;
+  height: 92px;
+}
+.client-link:hover,
+.client-link:focus {
+  border-color: var(--accent-color);
+}
+.client-link:hover .client-icoon,
+.client-link:focus .client-icoon {
+  fill: var(--accent-color);
 }
 .client-icoon {
   width: 106px;
   height: 60px;
-  fill: #AFB1B8;
+  fill: #afb1b8;
 }
 /*-----------footer------------*/
 .footer-bgr {
