--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,7 @@ body {
   color: var(--accent-color);
 }
 /*-----------------contact-header--------*/
+
 .contact-header {
   display: flex;
 }
@@ -108,6 +109,10 @@ body {
   font-size: 14px;
   line-height: 1.14;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 .contact-header .contact:hover,
 .contact-header .contact:focus {
@@ -116,11 +121,24 @@ body {
 .header-contact-svg {
   width: 10px;
   height: 16px;
+  fill: var(--primary-text-color);
+  margin-right: 10px;
+}
+.header-contact-svg:hover,
+.header-contact-svg:focus {
+  fill: var(--accent-color);
 }
 .header-email-svg {
   width: 16px;
   height: 12px;
+  fill: var(--primary-text-color);
+  margin-right: 10px;
 }
+.header-email-svg:hover,
+.header-email-svg:focus {
+  fill: var(--accent-color);
+}
+
 
 /*------------hero--------------*/
 
@@ -492,6 +510,12 @@ body {
   margin-right: 30px;
   margin-bottom: 30px;
   border: 1px solid #eeeeee;
+}
+.box-job:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+   0px 4px 4px rgba(0, 0, 0, 0.06),
+   1px 4px 6px rgba(0, 0, 0, 0.16);
+   cursor: pointer;
 }
 .box-job:nth-last-child(-n + 3) {
   margin-bottom: 0px;
