--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,7 @@ body {
 .item-contact:not(:last-child) {
   margin-right: 50px;
 }
+
 .contact-header .contact {
   color: var(--primary-text-color);
   font-weight: 500;
@@ -112,11 +113,18 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
-.contact-header .contact:hover,
-.contact-header .contact:focus {
+.contact:hover,
+.contact:focus {
   color: var(--accent-color);
+}
+.contact:hover .header-email-svg,
+.contact:focus .header-email-svg {
+  fill: var(--accent-color);
+}
+.contact:hover .header-contact-svg,
+.contact:focus .header-contact-svg {
+  fill: var(--accent-color);
 }
 .header-contact-svg {
   width: 10px;
@@ -196,7 +204,7 @@ body {
   display: flex;
   justify-content: center;
 }
-.company-image-item {
+.company-image {
   width: 270px;
   height: 120px;
   background-color: var(--light-color);
@@ -503,10 +511,9 @@ body {
 }
 .box-job {
   display: block;
-  width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-  border: 1px solid #eeeeee;
+  width: 370px;
 }
 .box-job:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
@@ -525,6 +532,7 @@ body {
 }
 .our-work {
   padding: 20px 24px;
+  border: 1px solid #eeeeee;
 }
 .jobs-name {
   color: var(--title-text-color);
